# matplotlib_set_diagrams

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml
docs/source/: conf.py  eulerdiagram.rst  index.rst  installation.rst  quickstart.rst  utils.rst  venndiagram.rst
examples/: 00_plot_quickstart.py  01_plot_EulerDiagram.py  02_plot_VennDiagram.py  03_plot_wordclouds.py  04_plot_customization.py  05_plot_cost_function_objectives.py  plot_01_EulerDiagram.py  plot_02_VennDiagram.py  plot_03_as_wordcloud.py  plot_04_customization.py  plot_05_cost_function_objectives.py  quickstart.py
matplotlib_euler/: __init__.py  _main.py
matplotlib_set_diagrams/: __init__.py  _diagram_classes.py  _main.py  _utils.py
tests/: test_diagram_classes.py  test_main.py  test_utils.py
venn/: _main.py
