[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib_set_diagrams"
dynamic = ["version"]
authors = [
        {name = "Paul Brodersen", email = "paulbrodersen+matplotlib_set_diagrams@gmail.com"},
]
description = "Python drawing utilities for Venn and Euler diagrams visualizing the relationships between two or more sets."
readme = "README.md"
keywords = [
         "matplotlib",
         "Euler diagram", 
         "Venn diagram",
         "set", 
         "visualisation",
         "visualization",
]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
            "Development Status :: 4 - Beta",
            "Intended Audience :: Science/Research",
            "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
            "Operating System :: OS Independent",
            "Programming Language :: Python :: 3",
            "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
               "numpy",
               "scipy", 
               "matplotlib",
               "shapely",
               "wordcloud",
]

[project.urls]
Repository = "https://github.com/paulbrodersen/matplotlib_set_diagrams"
Documentation =  "https://matplotlib-set-diagrams.readthedocs.io/en/latest/"

[project.optional-dependencies]
tests = [
      "pytest",
      "pytest-mpl",
      "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
    "sphinx-gallery",
    "Pillow",
]

[tool.setuptools.dynamic]
version = {attr = "matplotlib_set_diagrams.__version__"}

[tool.setuptools]
packages = ["matplotlib_set_diagrams"]
